--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,13 @@ section{
     height: 40px;
     width: 10%;
 }
+
+.title{
+    width: 100%;
+    height: 20px;
+
+}
+.type, .year{
+    width: 40px;
+    height: 10px;
+}
