--- a/css/style.css
+++ b/css/style.css
@@ -25,27 +25,34 @@ section{
     flex-wrap: nowrap;
     justify-content: space-around;
     height: 40px;
+    padding-top: 0;
 
 
 }
 
 .movieInfo{
-    display: inline-block;
+    display: flex;
     width: 50%;
-    height: 80%;
+    height: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin: 0
 }
 
-.rightSide{
-    height: 40px;
-    width: 10%;
+img{
+    margin-top: 1%;
 }
 
 .title{
     width: 100%;
     height: 20px;
+    margin: 0 auto;
+    text-align: center;
 
 }
 .type, .year{
     width: 40px;
     height: 10px;
+    margin: 0;
+    text-align: center;
 }
